--- a/application/online/view/index/index.html
+++ b/application/online/view/index/index.html
@@ -731,6 +731,9 @@
             console.log(data.data);
             cartController.initTableCart(data.data);
             console.log('refresh');
+        } else if (data.type == 'message_notify') {
+            console.log(data.data);
+            cartController.refreshCartText(data.data);
         }
     };
 
